--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,11 @@
     transform: rotate(360deg);
   }
 }
++/*.qiMap {
++  height: calc(100vh - 50px);
++}
++*/
+qiMap {
+ height: 1000px;
+ width: 1000px;
+}
